feat: separate library plugin from RNGP